# the_artificial_company

./: docker-compose.yaml  readme.md
backend/: Dockerfile  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/app/utils/: dir_tree.py
docs/: agile_implementation.md  diagrams.drawio  example_tasks_schema.json  git_commit_standards.md  org_chart_humans.md  project_structure.txt  software_requirements_spefications.md  tasks_schema.md  work_year_example.md
frontend/: Dockerfile  package-lock.json
frontend/my-dashboard/: package-lock.json  package.json  vite.config.ts
frontend/my-dashboard/src/: App.css  App.tsx  index.css  main.tsx  mockApi.tsx
frontend/my-dashboard/src/components/: Card.tsx  ChatBox.css  ChatBox.tsx  Header.tsx  MainContent.tsx  Sidebar.tsx
frontend/my-dashboard/src/data/: dashboardData.ts
mockups/: dashboard.html
